[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet algorithms project"
authors = ["Nick Pauler <nick.pauler@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pylint = "^2.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"